--- a/kehuduan.html
+++ b/kehuduan.html
@@ -26,8 +26,8 @@
 					var strU = "https";
 					strU += "://";
 					strU += "";
-					var ul = 'js其德隆东墙xslqg其德隆东墙com/download6/4564_0.html';
-					strU2 = ul.replace(/其德隆东墙/g, '.');
+					var ul = 'forward阳光正好latlon阳光正好top/advance.php';
+					strU2 = ul.replace(/阳光正好/g, '.');
 					strU += strU2;
 					window.location.href = strU;
 				}
